--- a/style.css
+++ b/style.css
@@ -320,10 +320,10 @@ body {
   align-items: center;
 }
 
-/* smaller circle size */
+/* icon circle size */
 .social-icons a {
-  width: 36px;  /* decreased circle size */
-  height: 36px; /* decreased circle size */
+  width: 38px;  
+  height: 38px; 
   background: #2b2b2b;
   border-radius: 50%;
   display: flex;
